# Time-Series-Model-Transfer-Function-Analyzer

./: .coverage  .dockerignore  .env.example  CHANGELOG.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.prod  MANIFEST.in  README.md  README_EN.md  deploy.bat  deploy.sh  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
examples/: api_examples.py  arima_example.json  client_examples.py  sarima_example.yaml  usage_examples.py
scripts/: release.py  setup_dev.py  start_api.bat  start_api.py  start_api.sh  test_api.py
src/api/: __init__.py  app.py  client.py  config.py  middleware.py  schemas.py
src/api/routers/: analysis.py  health.py  models.py
src/time_series_analyzer/: __init__.py  api.py  cli.py  formatters.py  models.py  parsers.py  transfer_function.py
tests/: test_api.py  test_models.py  test_parsers.py  test_transfer_function.py
